--- a/stylesheet/slice_style.css
+++ b/stylesheet/slice_style.css
@@ -30,7 +30,7 @@ html {
 
 body {
   display: grid;
-  grid-template: 100vh 440vh 55vh / 1fr repeat(2, 1.8fr) 1fr;
+  grid-template: 100vh 420vh 55vh / 1fr repeat(2, 1.8fr) 1fr;
 
   font-size: 1.6rem;
 }
@@ -216,7 +216,7 @@ nav {
 main {
   display: grid;
   grid-area: 2 / 1 / 3 / 5;
-  grid-template: 20vh 80vh 20vh 80vh 20vh 80vh 20vh 30vh 20vh 50vh 20vh / 1fr 35px repeat(2, 1.5fr) 35px 1fr;
+  grid-template: 20vh 80vh 20vh 80vh 20vh 80vh 20vh 30vh 10vh 50vh 10vh / 1fr 35px repeat(2, 1.5fr) 35px 1fr;
 }
 
 /* ----- Product Intro Section : Mads ----- */
@@ -397,7 +397,6 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: max-content;
 }
 
 .product_contact_signup_section div {
@@ -408,7 +407,7 @@ main {
   font-size: clamp(1em, 1vw, 3em);
   margin-bottom: 1rem;
 }
-.product_contact_signup_section p {
+.newsletter_description {
   font-size: clamp(1.1rem, 1.5vw, 1em);
   margin-bottom: 8rem;
   text-align: justify;
